# MatSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/examples/: flow.mkv  halftone.mkv
res/shaders/: nothing.vert
res/shaders/compiled/: nothing.vert.spv
src/: application.h  application_init.cpp  application_shutdown.cpp  application_update.cpp  camera.cpp  camera.h  code.cpp  common.h  compilation.cpp  core_initialization.cpp  core_mainLoop.cpp  core_shutdown.cpp  defines.h  definesNew.h  input_set.cpp  input_set.h  main.cpp  material.cpp  material.h  material_old.cpp  mesh.cpp  serialization.cpp  shader.cpp  shader.h  ui.cpp  ui.h  ui_arguments.cpp  window.cpp  window.h
src/graphics/: core.cpp  graphics.h  graphics_define_types.h  graphics_defines.h
